# AmazonProductSearch

./: Documentation.docx  README.md  RecommendationEngine.py  api.py  app.py  conda_requirements.txt  en_allmini_bm_pinecone.ipynb  en_voyager_bm_pinecone.ipynb  final_result_comparision.ipynb  ml_laBse_pinecone.ipynb  ml_voyager_pinecone.ipynb  pyproject.toml  requirements.txt
Notebooks/: datapreprocess.py
Notebooks/English/Preprocessing/: data_products_preprocesing.ipynb  data_queries_eval_preprocessing.ipynb
Notebooks/MultiLingual/Preprocessing/: data_check.ipynb  data_products_preprocesing.ipynb  data_queries_eval_preprocessing.ipynb
embedder/: hybridEmbeddingModel.py
embedder/dense/: allminiLMEnEmbedding.py  bgeBaseENEmbedding.py  bgeMicroENEmbedidng.py  bgeSmallEnEmbedding.py  gteBaseENEmbedding.py  gteLargeENEmbedding.py  gteSmallEnEmbedding.py  laBSEMultiLingualEmbedding.py  stellaENEmbedding.py  voyageLargeEnInstructEmbedding.py  voyageMultiLingualEmbedding.py
embedder/saved/: en_bm_fit_model.pkl
embedder/sparse/: bmEmbedding.py
evaluator/: batchParallelizedEvaluator.py  evaluator.py  parallelizedEvaluator.py
reranker/: jinaAIMultiLingualReranker.py
stale/: PineconeHybridSearch.ipynb  bm_fit_model.pkl  embedding.ipynb  not_used_embedding.py  pinecone_vector_database.py  rec.py  voyage.py
